--- a/SimpleServices/app/src/main/res/layout/activity_main.xml
+++ b/SimpleServices/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,102 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/bt_start_service"
+        android:id="@+id/bt_not_sticky_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text="@string/start_service" />
 
     <Button
-        android:id="@+id/bt_stop_service"
+        android:id="@+id/bt_not_sticky_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/bt_start_service"
-        android:layout_alignLeft="@+id/bt_start_service"
-        android:layout_alignRight="@+id/bt_start_service"
-        android:layout_alignStart="@+id/bt_start_service"
-        android:layout_below="@+id/bt_start_service"
+        android:layout_alignEnd="@+id/bt_not_sticky_start"
+        android:layout_alignLeft="@+id/bt_not_sticky_start"
+        android:layout_alignRight="@+id/bt_not_sticky_start"
+        android:layout_alignStart="@+id/bt_not_sticky_start"
+        android:layout_below="@+id/bt_not_sticky_start"
+        android:text="@string/stop_service" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Dont restart after kill (START_NOT_STICKY)"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textView"
+        android:layout_below="@+id/bt_not_sticky_stop"
+        android:text="Restart all after kill (START_STICKY)"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:id="@+id/bt_sticky_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/bt_not_sticky_stop"
+        android:layout_alignLeft="@+id/bt_not_sticky_stop"
+        android:layout_alignRight="@+id/bt_not_sticky_stop"
+        android:layout_alignStart="@+id/bt_not_sticky_stop"
+        android:layout_below="@+id/textView2"
+        android:text="@string/start_service" />
+
+    <Button
+        android:id="@+id/bt_sticky_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/bt_sticky_start"
+        android:layout_alignLeft="@+id/bt_sticky_start"
+        android:layout_alignRight="@+id/bt_sticky_start"
+        android:layout_alignStart="@+id/bt_sticky_start"
+        android:layout_below="@+id/bt_sticky_start"
+        android:text="@string/stop_service" />
+
+    <TextView
+        android:layout_marginTop="30dp"
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/bt_sticky_stop"
+        android:text="Restart all which finished without stopSelf() (START_REDELIVERY_INTENT)"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:id="@+id/bt_intent_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/bt_sticky_stop"
+        android:layout_alignLeft="@+id/bt_not_sticky_stop"
+        android:layout_alignRight="@+id/bt_sticky_stop"
+        android:layout_alignStart="@+id/bt_not_sticky_stop"
+        android:layout_below="@+id/textView3"
+        android:text="@string/start_service" />
+
+    <Button
+        android:id="@+id/bt_intent_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/bt_intent_start"
+        android:layout_alignLeft="@+id/bt_intent_start"
+        android:layout_alignRight="@+id/bt_intent_start"
+        android:layout_alignStart="@+id/bt_intent_start"
+        android:layout_below="@+id/bt_intent_start"
         android:text="@string/stop_service" />
 </RelativeLayout>
