--- a/DataBinding/app/src/main/res/layout/activity_databinding.xml
+++ b/DataBinding/app/src/main/res/layout/activity_databinding.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -7,24 +8,34 @@
             name="user"
             type="com.cook.databinding.User" />
 
-        <import type="com.cook.databinding.UnixDateConverter"/>
+        <import type="com.cook.databinding.UnixDateConverter" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{user.name}" />
 
         <TextView
             android:id="@+id/tv_age"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{UnixDateConverter.convert(user.age)}" />
+
+        <ImageView
+            app:imageAsset="@{user.imageUrl}"
+            android:id="@+id/imageView"
+            android:layout_width="213dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.45"
+             />
     </LinearLayout>
 </layout>
