--- a/DataBinding/app/src/main/res/layout/activity_databinding.xml
+++ b/DataBinding/app/src/main/res/layout/activity_databinding.xml
@@ -4,9 +4,13 @@
 
     <data>
 
-        <variable
-            name="user"
-            type="com.cook.databinding.User" />
+        <import type="java.util.List" />
+
+        <variable name="userList" type="List&lt;com.cook.databinding.User>" />
+
+        <variable name="userObservable" type="com.cook.databinding.UserObservable" />
+        <variable name="user" type="com.cook.databinding.User" />
+
 
     </data>
 
@@ -17,10 +21,19 @@
         android:weightSum="1">
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{user.name}"
+            android:textSize="18dp" />
+
+        <TextView
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{user.name}" />
+            android:gravity="center"
+            android:text="@{String.valueOf(user.age)}"
+            android:textSize="18dp" />
 
 
         <ImageView
@@ -30,6 +43,19 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.45"
             app:imageAsset="@{user.imageUrl}" />
+
+        <TextView
+            android:gravity="center"
+            android:text="@{userObservable.firstName}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:gravity="center"
+            android:text="@{userObservable.lastName}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 </layout>
