--- a/DataStorage/app/src/main/res/layout/activity_external_storage.xml
+++ b/DataStorage/app/src/main/res/layout/activity_external_storage.xml
@@ -16,54 +16,80 @@
             android:layout_gravity="center_horizontal" />
 
         <Button
-            android:id="@+id/btSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="get_external_dir"
+            android:id="@+id/btGetExternalDir"
             android:layout_below="@+id/etFileData"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/btLoad"
-            android:layout_alignEnd="@+id/btLoad" />
+            android:layout_alignRight="@+id/button"
+            android:layout_alignEnd="@+id/button" />
 
         <Button
-            android:id="@+id/btLoad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Load"
-            android:layout_below="@+id/btSave"
+            android:text="get_external_cahce_dir"
+            android:id="@+id/button"
+            android:layout_below="@+id/textView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/btGetDir"
-            android:layout_alignEnd="@+id/btGetDir" />
+            android:layout_alignParentStart="true" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="get_Dir"
-            android:id="@+id/btGetDir"
-            android:layout_below="@+id/btLoad"
+            android:text="save_In_External_Dir"
+            android:id="@+id/button2"
+            android:layout_below="@+id/textView2"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="load_external_dir"
+            android:id="@+id/button3"
             android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/btGetCacheDir"
-            android:layout_alignEnd="@+id/btGetCacheDir" />
+            android:layout_below="@+id/button2"
+            android:layout_alignParentLeft="true" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="get_cache_dir"
-            android:id="@+id/btGetCacheDir"
-            android:layout_below="@+id/btGetDir" />
+            android:text="save_in_exteranal_cache_dir"
+            android:id="@+id/button4"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/button3"
+            android:layout_alignParentLeft="true" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="file_list"
-            android:id="@+id/btFileList"
-            android:layout_below="@+id/btGetCacheDir"
+            android:text="load_external_cache_dir"
+            android:id="@+id/button5"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/button4"
+            android:layout_alignParentLeft="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Large Text"
+            android:id="@+id/textView"
+            android:layout_below="@+id/btGetExternalDir"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignRight="@+id/btGetCacheDir"
-            android:layout_alignEnd="@+id/btGetCacheDir" />
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/textView2"
+            android:layout_below="@+id/button"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
     </RelativeLayout>
 </layout>
